--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@ a{
     color: #fff;
     cursor: pointer;
     background-color: var(--black-color);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -84,6 +85,36 @@ a{
 }
 
 /*! Header kodları*/
+
+.header .search-form{
+    position: absolute;
+    top: 115%;
+    right: 7%;
+    background-color: #fff;
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    border-radius: 3rem;
+    box-shadow: 0px 0px 25px 2px  rgba(0, 0, 0, 75%);
+    transform: scaleY(0);
+}
+
+.header .search-form.active{
+    transform: scaleY(1);
+}
+
+.header .search-form i{
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+    color: var(--black-color);
+}
+
+.header .search-form input{
+    width: 100%;
+}
+
 .header  .logo img {
     height : 10rem;
 }
@@ -103,13 +134,12 @@ a{
 
 }
 
-
-
 .header .navbar a{
     margin : 0.1rem;
     font-size: 1.6rem;
     color: var(--black-color);
     border-bottom: 0.1rem solid transparent;
+   
 }
 
 .header .navbar .active,
@@ -125,6 +155,10 @@ cursor: pointer;
     margin-left: 2rem;
     background-color: transparent;
 }   
+
+#menu-btn{
+    display: none;
+}
 /*! Header kodları*/
 
 /*! Home kodları*/
@@ -419,6 +453,7 @@ cursor: pointer;
 
 .footer .search .search-input{
     width: 30rem;
+    
 }
 
 .footer .search .btn-primary{
@@ -483,5 +518,64 @@ cursor: pointer;
 .footer .credit span{
     color: var(--main-color);
 }
+
+
+/*! Responsive */
+ @media (max-width: 991px){
+    html{
+        font-size: 55%;
+    }
+
+    .header{
+        padding: 1.5rem 2rem;
+    }
+
+    .header .logo img{
+        height: 7rem;
+    }
+
+    section{
+        padding:2rem;
+    }
+
+    .miras .box-container .box .box-head .name{
+        font-size: 3.4rem;
+    }
+ }
+
+ @media(max-width: 768px){
+    #menu-btn{
+        display: inline-block;
+    }
+
+    .header .navbar{
+        position: absolute;
+        top: 95%;
+        background-color: #fff;
+        height: calc(100vh - 9rem);
+        width: 30rem;
+        box-shadow: 0px 10px 14px 0px rgb(0 0 0 / 75%);
+        right: -100%;
+    }
+
+    .header .navbar.active{
+        right: 3rem;
+         /* veya arka plan renginize uygun bir değer */
+         max-height: 55vh; /* Belirli bir yükseklik, örneğin viewport yüksekliğinin %80'i */
+         overflow-y: auto;
+    }
+
+    .header .navbar a{
+        color: var(--black-color);
+        display: block;
+        margin: 1.5rem;
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+    
+ }
+
+
+
 
 
