--- a/styles/style.css
+++ b/styles/style.css
@@ -297,7 +297,19 @@ cursor: pointer;
    
 /*! Sehir kodları*/
 
+.profile-picture {
+    text-align: center;
+    margin-bottom: 20px;
+}
 
+.profile-picture img {
+    width: 25rem; 
+    height: 25rem; 
+    border-radius: 50%;
+    object-fit: cover;
+    border: 5px solid #fff; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
 /* Admin İletişim Tablo Stilleri */
 .admin {
     display: flex;
